Updated list style gradient test

--- a/list-style-gradient.html
+++ b/list-style-gradient.html
@@ -6,8 +6,11 @@
 <link rel="stylesheet" type="text/css" href="c/style-insert-tests.css">
 <style type="text/css" media="all" id="tests">
 
-li {list-style: circle;}
-li {list-style: radial-gradient(closest-side,orange,orange 60%,blue 60%,blue 95%,transparent);}
+ul li {list-style: circle;}
+ul li {list-style: radial-gradient(closest-side,orange,orange 60%,blue 60%,blue 95%,transparent);}
+
+ol li {list-style: alpha;}
+ol li {list-style: linear-gradient(45deg, red, red 50%, orange 50%, orange);}
 
 </style>
 </head>
@@ -20,6 +23,14 @@ li {list-style: radial-gradient(closest-side,orange,orange 60%,blue 60%,blue 95%
 <li>So is this.</li>
 <li>The list is unordered.</li>
 </ul>
+
+
+<ol>
+<li>This is a list item.</li>
+<li>So is this.</li>
+<li>The list is unordered.</li>
+</ol>
+
 
 </body>
 </html>
