Updated list style gradient test

--- a/list-style-gradient.html
+++ b/list-style-gradient.html
@@ -9,7 +9,7 @@
 ul li {list-style: circle;}
 ul li {list-style: radial-gradient(closest-side,orange,orange 60%,blue 60%,blue 95%,transparent);}
 
-ol li {list-style: alpha;}
+ol li {list-style: upper-alpha;}
 ol li {list-style: linear-gradient(45deg, red, red 50%, orange 50%, orange);}
 
 </style>
