Updated list style gradient test

--- a/list-style-gradient.html
+++ b/list-style-gradient.html
@@ -28,7 +28,7 @@ ol li {list-style: linear-gradient(45deg, red, red 50%, orange 50%, orange);}
 <ol>
 <li>This is a list item.</li>
 <li>So is this.</li>
-<li>The list is unordered.</li>
+<li>The list is ordered.</li>
 </ol>
 
 
