--- a/list-style-gradient.html
+++ b/list-style-gradient.html
@@ -12,6 +12,9 @@ ul li {list-style: radial-gradient(closest-side,orange,orange 60%,blue 60%,blue 
 ol li {list-style: upper-alpha;}
 ol li {list-style: linear-gradient(45deg, red, red 50%, orange 50%, orange);}
 
+li:first-child {font-size: 200%;}
+li {font-size: 150%;}
+li:last-child {font-size: 100%;}
 </style>
 </head>
 <body>
