Updated list style gradient test to make the rainbow colors accurate

--- a/list-style-gradient.html
+++ b/list-style-gradient.html
@@ -17,7 +17,7 @@ li {font-size: 150%;}
 li:last-child {font-size: 100%;}
 
 ol.rainbow li {list-style: radial-gradient(farthest-side at bottom right,
-	transparent, transparent 50%, red, orange, yellow, green, blue, indigo, violet, transparent);}
+	transparent, transparent 50%, violet, indigo, blue, green, yellow, orange, red, transparent);}
 </style>
 </head>
 <body>
