Added a sky to the rainbow bullets

--- a/list-style-gradient.html
+++ b/list-style-gradient.html
@@ -17,7 +17,7 @@ li {font-size: 150%;}
 li:last-child {font-size: 100%;}
 
 ol.rainbow li {list-style: radial-gradient(farthest-side at bottom right,
-	transparent, transparent 50%, violet, indigo, blue, green, yellow, orange, red, transparent);}
+	lightblue, lightblue 50%, violet, indigo, blue, green, yellow, orange, red, lightblue);}
 </style>
 </head>
 <body>
