--- a/css3/shape-outside.html
+++ b/css3/shape-outside.html
@@ -6,7 +6,8 @@
 <link rel="stylesheet" href="c/base.css" type="text/css">
 <style type="text/css" id="tests">
 .arena p {border: 1px dotted gray; clear: left; width: 42em; margin: 1em auto;}
-.arena p img {width: 20px; height: 20px; float: left;
+.arena p img {float: left;}
+img[src*="box-red"] {width: 20px; height: 20px;
 	background: yellow; padding: 10px; border: 10px solid cyan; margin: 10px;}
 
 #p01 img {shape-outside: margin-box;}
@@ -20,6 +21,7 @@
 #p09 img {shape-outside: ellipse(40px 60px at 10px 30px);}
 #p10 img {shape-outside: polygon(50% 0, 100% 50%, 50% 100%, 0 50%);}
 #p11 img {shape-outside: url(i/box-red.gif);}
+#p12 img {shape-outside: url(i/circle-blue-half-tilted.png);}
 </style>
 </head>
 <body id="www-meyerweb-com" class="css test suite">
@@ -80,6 +82,11 @@ Bedford non langston hughes nulla, in lake erie glenwillow nam. Ea parum accumsa
 <p id="p11">
 [#p11]
 <img src="i/box-red.gif">
+Bedford non langston hughes nulla, in lake erie glenwillow nam. Ea parum accumsan, mark price. Nunc highland heights bob golic olmsted township te vulputate saepius, william g. mather modo vel et putamus. Et nostrud university heights ut. Claram lius soluta odio molestie quinta claritatem tempor mutationem praesent. Urban meyer eros et dolore severance hall ii id sed ut fairview park. At lectores legunt videntur. Dynamicus ut ut lectorum burgess meredith paul newman autem seacula lobortis amet. Amet quod frank yankovic nobis michael ruhlman, typi qui eu possim nibh iis nam.
+</p>
+<p id="p12">
+[#p12]
+<img src="i/circle-blue-half-tilted.png">
 Bedford non langston hughes nulla, in lake erie glenwillow nam. Ea parum accumsan, mark price. Nunc highland heights bob golic olmsted township te vulputate saepius, william g. mather modo vel et putamus. Et nostrud university heights ut. Claram lius soluta odio molestie quinta claritatem tempor mutationem praesent. Urban meyer eros et dolore severance hall ii id sed ut fairview park. At lectores legunt videntur. Dynamicus ut ut lectorum burgess meredith paul newman autem seacula lobortis amet. Amet quod frank yankovic nobis michael ruhlman, typi qui eu possim nibh iis nam.
 </p>
 
