--- a/css3/border-image.html
+++ b/css3/border-image.html
@@ -5,10 +5,13 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="stylesheet" href="c/base.css" type="text/css">
 <style type="text/css" id="tests">
-#p01 {border-image: url(i/dot-red.gif) 100%/5px repeat;}
-#p02 {border-image: url(i/dot-red.gif) 100% repeat; border-width: 5px;}
-#p03 {border-image: url(i/dot-red.gif) 100% repeat;}
-#p04 {border-image: url(i/dot-red.gif) 100% stretch;}
+.arena p {border: 29px solid #FAA;}
+#p01 {border-image: url(i/stars-multicolor.png) 28 29 repeat;}
+#p02 {border-image: url(i/stars-multicolor.png) 28 29/25% repeat;}
+#p03 {border-image: url(i/stars-multicolor.png) 28 29 round;}
+#p04 {border-image: url(i/stars-multicolor.png) 28 29 stretch;}
+#p05 {border-image: url(i/stars-multicolor.png) 28 29 space;}
+#p06 {border-image: url(i/stars-multicolor.png) 28 29 space round;}
 
 </style>
 </head>
@@ -18,16 +21,22 @@
 <div class="arena">
 
 <p id="p01">
-[#p01] This is a paragraph that should have an image border using the following image: <img src="i/dot-red.gif" alt="">.
+[#p01] This is a paragraph that should have an image border using the following image: <img src="i/stars-multicolor.png" alt="">.
 </p>
 <p id="p02">
-[#p02] This is a paragraph that should have an image border using the following image: <img src="i/dot-red.gif" alt="">.
+[#p02] This is a paragraph that should have an image border using the following image: <img src="i/stars-multicolor.png" alt="">.
 </p>
 <p id="p03">
-[#p03] This is a paragraph that should have an image border using the following image: <img src="i/dot-red.gif" alt="">.
+[#p03] This is a paragraph that should have an image border using the following image: <img src="i/stars-multicolor.png" alt="">.
 </p>
 <p id="p04">
-[#p04] This is a paragraph that should have an image border using the following image: <img src="i/dot-red.gif" alt="">.
+[#p04] This is a paragraph that should have an image border using the following image: <img src="i/stars-multicolor.png" alt="">.
+</p>
+<p id="p05">
+[#p05] This is a paragraph that should have an image border using the following image: <img src="i/stars-multicolor.png" alt="">.
+</p>
+<p id="p06">
+[#p06] This is a paragraph that should have an image border using the following image: <img src="i/stars-multicolor.png" alt="">.
 </p>
 
 </div>
