Extended border-image test

--- a/css3/border-image.html
+++ b/css3/border-image.html
@@ -11,7 +11,8 @@
 #p03 {border-image: url(i/stars-multicolor.png) 28 29 round;}
 #p04 {border-image: url(i/stars-multicolor.png) 28 29 stretch;}
 #p05 {border-image: url(i/stars-multicolor.png) 28 29 space;}
-#p06 {border-image: url(i/stars-multicolor.png) 28 29 space round;}
+#p06 {border-image: url(i/stars-multicolor.png) 28 29 space stretch;}
+#p07 {border-image: url(i/stars-multicolor.png) 28 29 round stretch;}
 
 </style>
 </head>
@@ -37,6 +38,9 @@
 </p>
 <p id="p06">
 [#p06] This is a paragraph that should have an image border using the following image: <img src="i/stars-multicolor.png" alt="">.
+</p>
+<p id="p07">
+[#p07] This is a paragraph that should have an image border using the following image: <img src="i/stars-multicolor.png" alt="">.
 </p>
 
 </div>
