Updated spec reference in box-sizing

--- a/css3/box-sizing.html
+++ b/css3/box-sizing.html
@@ -11,7 +11,7 @@
 </style>
 </head>
 <body id="www-meyerweb-com" class="css test suite">
-<p id="specref"><a href="http://www.w3.org/TR/css3-background/#the-box-sizing">http://www.w3.org/TR/css3-background/#the-box-sizing</a></p>
+<p id="specref"><a href="http://www.w3.org/TR/css3-ui/#box-sizing">http://www.w3.org/TR/css3-ui/#box-sizing</a></p>
 
 <div class="arena">
 
