Updated shape-image-threshold test

--- a/css3/shape-image-threshold.html
+++ b/css3/shape-image-threshold.html
@@ -6,13 +6,14 @@
 <link rel="stylesheet" href="c/base.css" type="text/css">
 <style type="text/css" id="tests">
 .arena p {border: 1px dotted gray; clear: left; width: 42em; margin: 1em auto;}
-img[src*="stripes-fading"] {float: left; shape-outside: url(i/stripes-fading.png);}
+img[src*="stripes"] {float: left; height: 120px; shape-outside: url(i/stripes-diagonal-fading.png);}
 
 #p01 img {shape-image-threshold: 0.0;}
-#p02 img {shape-image-threshold: 0.25;}
-#p03 img {shape-image-threshold: 0.5;}
-#p04 img {shape-image-threshold: 0.75;}
-#p05 img {shape-image-threshold: 1.0;}
+#p02 img {shape-image-threshold: 0.2;}
+#p03 img {shape-image-threshold: 0.4;}
+#p04 img {shape-image-threshold: 0.6;}
+#p05 img {shape-image-threshold: 0.8;}
+#p06 img {shape-image-threshold: 1.0;}
 </style>
 </head>
 <body id="www-meyerweb-com" class="css test suite">
@@ -22,27 +23,32 @@ img[src*="stripes-fading"] {float: left; shape-outside: url(i/stripes-fading.png
 
 <p id="p01">
 [#p01]
-<img src="i/stripes-fading.png">
+<img src="i/stripes-diagonal-fading.png">
 Bedford non langston hughes nulla, in lake erie glenwillow nam. Ea parum accumsan, mark price. Nunc highland heights bob golic olmsted township te vulputate saepius, william g. mather modo vel et putamus. Et nostrud university heights ut. Claram lius soluta odio molestie quinta claritatem tempor mutationem praesent. Urban meyer eros et dolore severance hall ii id sed ut fairview park. At lectores legunt videntur. Dynamicus ut ut lectorum burgess meredith paul newman autem seacula lobortis amet. Amet quod frank yankovic nobis michael ruhlman, typi qui eu possim nibh iis nam.
 </p>
 <p id="p02">
 [#p02]
-<img src="i/stripes-fading.png">
+<img src="i/stripes-diagonal-fading.png">
 Bedford non langston hughes nulla, in lake erie glenwillow nam. Ea parum accumsan, mark price. Nunc highland heights bob golic olmsted township te vulputate saepius, william g. mather modo vel et putamus. Et nostrud university heights ut. Claram lius soluta odio molestie quinta claritatem tempor mutationem praesent. Urban meyer eros et dolore severance hall ii id sed ut fairview park. At lectores legunt videntur. Dynamicus ut ut lectorum burgess meredith paul newman autem seacula lobortis amet. Amet quod frank yankovic nobis michael ruhlman, typi qui eu possim nibh iis nam.
 </p>
 <p id="p03">
 [#p03]
-<img src="i/stripes-fading.png">
+<img src="i/stripes-diagonal-fading.png">
 Bedford non langston hughes nulla, in lake erie glenwillow nam. Ea parum accumsan, mark price. Nunc highland heights bob golic olmsted township te vulputate saepius, william g. mather modo vel et putamus. Et nostrud university heights ut. Claram lius soluta odio molestie quinta claritatem tempor mutationem praesent. Urban meyer eros et dolore severance hall ii id sed ut fairview park. At lectores legunt videntur. Dynamicus ut ut lectorum burgess meredith paul newman autem seacula lobortis amet. Amet quod frank yankovic nobis michael ruhlman, typi qui eu possim nibh iis nam.
 </p>
 <p id="p04">
 [#p04]
-<img src="i/stripes-fading.png">
+<img src="i/stripes-diagonal-fading.png">
 Bedford non langston hughes nulla, in lake erie glenwillow nam. Ea parum accumsan, mark price. Nunc highland heights bob golic olmsted township te vulputate saepius, william g. mather modo vel et putamus. Et nostrud university heights ut. Claram lius soluta odio molestie quinta claritatem tempor mutationem praesent. Urban meyer eros et dolore severance hall ii id sed ut fairview park. At lectores legunt videntur. Dynamicus ut ut lectorum burgess meredith paul newman autem seacula lobortis amet. Amet quod frank yankovic nobis michael ruhlman, typi qui eu possim nibh iis nam.
 </p>
 <p id="p05">
 [#p05]
-<img src="i/stripes-fading.png">
+<img src="i/stripes-diagonal-fading.png">
+Bedford non langston hughes nulla, in lake erie glenwillow nam. Ea parum accumsan, mark price. Nunc highland heights bob golic olmsted township te vulputate saepius, william g. mather modo vel et putamus. Et nostrud university heights ut. Claram lius soluta odio molestie quinta claritatem tempor mutationem praesent. Urban meyer eros et dolore severance hall ii id sed ut fairview park. At lectores legunt videntur. Dynamicus ut ut lectorum burgess meredith paul newman autem seacula lobortis amet. Amet quod frank yankovic nobis michael ruhlman, typi qui eu possim nibh iis nam.
+</p>
+<p id="p06">
+[#p06]
+<img src="i/stripes-diagonal-fading.png">
 Bedford non langston hughes nulla, in lake erie glenwillow nam. Ea parum accumsan, mark price. Nunc highland heights bob golic olmsted township te vulputate saepius, william g. mather modo vel et putamus. Et nostrud university heights ut. Claram lius soluta odio molestie quinta claritatem tempor mutationem praesent. Urban meyer eros et dolore severance hall ii id sed ut fairview park. At lectores legunt videntur. Dynamicus ut ut lectorum burgess meredith paul newman autem seacula lobortis amet. Amet quod frank yankovic nobis michael ruhlman, typi qui eu possim nibh iis nam.
 </p>
 
