--- a/css3/shape-outside.html
+++ b/css3/shape-outside.html
@@ -23,6 +23,9 @@ img[src*="box-red"] {width: 20px; height: 20px;
 #p11 img {shape-outside: url(i/box-red.gif);}
 #p12 img {shape-outside: url(i/circle-blue-half-tilted.png);}
 #p13 img {shape-outside: url(i/circle-blue-half-tilted.png);}
+#p14 img {shape-outside: inset(-50px);}
+#p15 img {shape-outside: polygon(0 0, 200% 0, 100% 50%, 0 50%);}
+#p16 img {shape-outside: border-box polygon(0 0, 200% 0, 100% 50%, 0 50%); margin-right: 50px;}
 </style>
 </head>
 <body id="www-meyerweb-com" class="css test suite">
@@ -93,6 +96,21 @@ Bedford non langston hughes nulla, in lake erie glenwillow nam. Ea parum accumsa
 <p id="p13">
 [#p13]
 <img src="i/circle-blue-half-tilted.jpg">
+Bedford non langston hughes nulla, in lake erie glenwillow nam. Ea parum accumsan, mark price. Nunc highland heights bob golic olmsted township te vulputate saepius, william g. mather modo vel et putamus. Et nostrud university heights ut. Claram lius soluta odio molestie quinta claritatem tempor mutationem praesent. Urban meyer eros et dolore severance hall ii id sed ut fairview park. At lectores legunt videntur. Dynamicus ut ut lectorum burgess meredith paul newman autem seacula lobortis amet. Amet quod frank yankovic nobis michael ruhlman, typi qui eu possim nibh iis nam.
+</p>
+<p id="p14">
+[#p14]
+<img src="i/box-red.gif">
+Bedford non langston hughes nulla, in lake erie glenwillow nam. Ea parum accumsan, mark price. Nunc highland heights bob golic olmsted township te vulputate saepius, william g. mather modo vel et putamus. Et nostrud university heights ut. Claram lius soluta odio molestie quinta claritatem tempor mutationem praesent. Urban meyer eros et dolore severance hall ii id sed ut fairview park. At lectores legunt videntur. Dynamicus ut ut lectorum burgess meredith paul newman autem seacula lobortis amet. Amet quod frank yankovic nobis michael ruhlman, typi qui eu possim nibh iis nam.
+</p>
+<p id="p15">
+[#p15]
+<img src="i/box-red.gif">
+Bedford non langston hughes nulla, in lake erie glenwillow nam. Ea parum accumsan, mark price. Nunc highland heights bob golic olmsted township te vulputate saepius, william g. mather modo vel et putamus. Et nostrud university heights ut. Claram lius soluta odio molestie quinta claritatem tempor mutationem praesent. Urban meyer eros et dolore severance hall ii id sed ut fairview park. At lectores legunt videntur. Dynamicus ut ut lectorum burgess meredith paul newman autem seacula lobortis amet. Amet quod frank yankovic nobis michael ruhlman, typi qui eu possim nibh iis nam.
+</p>
+<p id="p16">
+[#p16]
+<img src="i/box-red.gif">
 Bedford non langston hughes nulla, in lake erie glenwillow nam. Ea parum accumsan, mark price. Nunc highland heights bob golic olmsted township te vulputate saepius, william g. mather modo vel et putamus. Et nostrud university heights ut. Claram lius soluta odio molestie quinta claritatem tempor mutationem praesent. Urban meyer eros et dolore severance hall ii id sed ut fairview park. At lectores legunt videntur. Dynamicus ut ut lectorum burgess meredith paul newman autem seacula lobortis amet. Amet quod frank yankovic nobis michael ruhlman, typi qui eu possim nibh iis nam.
 </p>
 
