Cleaned up Shapes/GC test a little

--- a/css3/shape-outside-2.html
+++ b/css3/shape-outside-2.html
@@ -6,8 +6,13 @@
 <link rel="stylesheet" href="c/base.css" type="text/css">
 <style type="text/css" id="tests">
 .arena p {border: 1px dotted gray; clear: left; width: 42em; margin: 1em auto;}
-#p01 img {float: left; shape-outside: url(i/stripes-diagonal-fading.png); shape-image-threshold: 0.33;}
-#p02::before {float: left; content: url(i/stripes-diagonal-fading.png); shape-outside: url(i/stripes-diagonal-fading.png); shape-image-threshold: 0.33;}
+#p01 img {float: left;
+	shape-outside: url(i/stripes-diagonal-fading.png);
+	shape-image-threshold: 0.33;}
+#p02::before {float: left;
+	content: url(i/stripes-diagonal-fading.png);
+	shape-outside: url(i/stripes-diagonal-fading.png);
+	shape-image-threshold: 0.33;}
 </style>
 </head>
 <body id="www-meyerweb-com" class="css test suite">
