Added an attr() test to shape-outside-2

--- a/css3/shape-outside-2.html
+++ b/css3/shape-outside-2.html
@@ -13,6 +13,9 @@
 	content: url(i/stripes-diagonal-fading.png);
 	shape-outside: url(i/stripes-diagonal-fading.png);
 	shape-image-threshold: 0.33;}
+#p03 img {float: left;
+	shape-outside: attr(src);
+	shape-image-threshold: 0.33;}
 </style>
 </head>
 <body id="www-meyerweb-com" class="css test suite">
@@ -28,6 +31,12 @@ Bedford non langston hughes nulla, in lake erie glenwillow nam. Ea parum accumsa
 
 <p id="p02">
 [#p02]
+Bedford non langston hughes nulla, in lake erie glenwillow nam. Ea parum accumsan, mark price. Nunc highland heights bob golic olmsted township te vulputate saepius, william g. mather modo vel et putamus. Et nostrud university heights ut. Claram lius soluta odio molestie quinta claritatem tempor mutationem praesent. Urban meyer eros et dolore severance hall ii id sed ut fairview park. At lectores legunt videntur. Dynamicus ut ut lectorum burgess meredith paul newman autem seacula lobortis amet. Amet quod frank yankovic nobis michael ruhlman, typi qui eu possim nibh iis nam.
+</p>
+
+<p id="p03">
+<img src="i/stripes-diagonal-fading.png">
+[#p03]
 Bedford non langston hughes nulla, in lake erie glenwillow nam. Ea parum accumsan, mark price. Nunc highland heights bob golic olmsted township te vulputate saepius, william g. mather modo vel et putamus. Et nostrud university heights ut. Claram lius soluta odio molestie quinta claritatem tempor mutationem praesent. Urban meyer eros et dolore severance hall ii id sed ut fairview park. At lectores legunt videntur. Dynamicus ut ut lectorum burgess meredith paul newman autem seacula lobortis amet. Amet quod frank yankovic nobis michael ruhlman, typi qui eu possim nibh iis nam.
 </p>
 
