Added link to degenerate radial test

--- a/gradient-radial-degenerate.html
+++ b/gradient-radial-degenerate.html
@@ -32,7 +32,7 @@ section div::before {content: '[.' attr(class) ']';}
 <body>
 
 <h1>Degenerate radial gradients</h1>
-<p>(because it’s the best section title in the history of W3C specs, that’s why)</p>
+<p>(because it’s <a href="http://www.w3.org/TR/css3-images/#degenerate-radials">the best section title in the history of W3C specs</a>, that’s why)</p>
 
 <section>
 
