Grid L1 TOC update

--- a/grid-level-01/example029.html
+++ b/grid-level-01/example029.html
@@ -6,8 +6,8 @@
 <link type="text/css" rel="stylesheet" href="_baseline.css">
 <style type="text/css">
 .grid {background:
-	linear-gradient(to right, transparent 49px, cyan 49px),
-	linear-gradient(to bottom, transparent 49px, cyan 49px);
+	linear-gradient(to right, cyan 0.5px, transparent 0.5px, transparent 49.5px, cyan 49.5px),
+	linear-gradient(to bottom, cyan 0.5px, transparent 0.5px, transparent 49.5px, cyan 49.5px);
 	background-size: 50px 100%, 100% 50px;
 	margin-bottom: 2em; border: 1px solid;
 }
