--- a/grid-level-01/example030.html
+++ b/grid-level-01/example030.html
@@ -18,7 +18,7 @@
 <style type="text/css" class="show">
 .grid {width: 500px; height: 200px;
        display: grid;
-       grid: 50px / repeat(10, 25px [text]);}
+       grid: repeat(10,50px) / repeat(10, 25px [text]);}
 .d01 {grid-row: text 5 / text 7; grid-column: 3 / 5;}
 .d02 {grid-row: text 5 / span text 2; grid-column: 4 / 6;}
 </style>
