Grid L1 fix (missing px)

--- a/grid-level-01/example029.html
+++ b/grid-level-01/example029.html
@@ -17,7 +17,7 @@
 <style type="text/css" class="show">
 .grid {width: 250px; height: 200px;
        display: grid;
-       grid-template-columns: [start] 50px [first] 50px [second] 50px [middle] 50px [last] 50 [end];
+       grid-template-columns: [start] 50px [first] 50px [second] 50px [middle] 50px [last] 50px [end];
        grid-template-rows: repeat(5, 50px);}
 .d01 {grid-column: first / middle; grid-row: 2 / 4;}
 .d02 {grid-column: 2 / 4;          grid-row: 2 / 4;}
