--- a/grid-level-01/example027.html
+++ b/grid-level-01/example027.html
@@ -17,7 +17,7 @@
 </style>
 <style type="text/css" class="show">
 .grid {width: 250px; height: 150px;
-       display: grid; grid: 50px / 50px;}
+       display: grid; grid: repeat(5, 50px) / repeat(3, 50px);}
 .d01 {grid-row: 2; grid-column: 3;}
 .d02 {grid-area: 2 / 3;}
 </style>
