--- a/grid-level-01/example028.html
+++ b/grid-level-01/example028.html
@@ -17,7 +17,7 @@
 </style>
 <style type="text/css" class="show">
 .grid {width: 250px; height: 400px;
-       display: grid; grid: 50px / 50px;}
+       display: grid; grid: repeat(5, 50px) / repeat(8, 50px);}
 .d01 {grid-row: 2 / span 5;}
 .d02 {grid-row: span 5 / 7;}
 </style>
