--- a/grid-level-01/example025.html
+++ b/grid-level-01/example025.html
@@ -17,7 +17,7 @@
 <style type="text/css" class="show">
 #g01 {width: 100px; height: 150px;
        margin-bottom: 2em; border: 1px solid;
-       display: grid; grid: 50px / 50px;
+       display: grid; grid: 50px 50px / 50px 50px 50px;
        grid-template-areas: "head head"
                             "nav  main"
                             "foot ...."
