Updated Grid L1 example 4 (added reference rendering)

--- a/grid-level-01/example004.html
+++ b/grid-level-01/example004.html
@@ -5,7 +5,7 @@
 <title>Grid Example 4 (20151104 ED)</title>
 <link type="text/css" rel="stylesheet" href="_baseline.css">
 <style type="text/css">
-#grid {height: 13em; width: 50%;}
+#grid {height: 15em; width: 50%;}
 #grid div {border: 1px dotted red;}
 #grid div[id]::before {content: "[#" attr(id) "] ";}
 </style>
@@ -29,6 +29,13 @@
 	<div id="d06"></div>
 </div>
 
+
+<section id="reference">
+
+<p>Reference rendering, in terms of sizing (note <code>1fr</code> areas may be a different width or height than the above):</p>
+<img src="refrends/example004.png" alt="">
+
+</section>
 
 </body>
 </html>
