Fix for example 34

--- a/grid-level-01/example034.html
+++ b/grid-level-01/example034.html
@@ -23,7 +23,7 @@ body {padding-left: 3em;}
 <style type="text/css" class="show">
 #grid {
 	display: grid;
-	grid-template-columns: repeat(3, [A] 50px [B] 50px [C] 50px);
+	grid-template-columns: repeat(2, [A] 50px [B] 50px [C] 50px) [A] 50px [B] 50px [C];
 	grid-template-rows: repeat(10, 1.5em);
 }
 .d01 {grid-row: 1; grid-column-start: 4; grid-column-end: auto;} /* Line 4 to line 5 */
